# PalworldSav.Net

./: .gitignore  PalworldSav.Net.sln  README.md
examples/PalWorld.Sav.Examples.Deserializer/: PalWorld.Sav.Examples.Deserializer.sln
examples/PalWorld.Sav.Examples.Deserializer/PalWorld.Sav.Examples.Deserializer/: PalWorld.Sav.Examples.Deserializer.csproj  Program.cs
examples/PalWorld.Sav.Examples.Serializer/: PalWorld.Sav.Examples.Serializer.sln
examples/PalWorld.Sav.Examples.Serializer/PalWorld.Sav.Examples.Serializer/: PalWorld.Sav.Examples.Serializer.csproj  Program.cs  example.json
examples/PalWorldSav.Deserializer.Example/: PalWorldSav.Deserializer.Example.csproj  Program.cs
examples/PalWorldSav.Deserializer.Example/samples/: LevelMeta.sav
src/: PalWorld.Sav.Net.sln
src/PalWorld.Sav.Serializer/: PalWorld.Sav.Serializer.csproj  SavFileFormat.cs  SavFileFormatReader.cs  SavFileHandler.cs  SaveFileFormatWriter.cs  UeSave.cs
src/UnrealSave-Serializer/: Cargo.toml
src/UnrealSave-Serializer/src/: unrealsave-serializer.rs
src/ue_gvas_handler/: Cargo.toml
src/ue_gvas_handler/src/: bridge.rs
ue_gvas_handler/src/: bridge.rs
