[package]
name = "unrealsave-serializer"
version = "0.1.0"

[lib]
name = "unrealsaveserializer"
path = "src/unrealsave-serializer.rs"
crate-type = ["cdylib"]

[dependencies]
uesave = { git = "https://github.com/trumank/uesave-rs" }
serde_json = { version = "1.0.111", features = ["preserve_order"] }
libc = "0.2.153"